force-app/main/default/objects/Recently_Viewed_Product__c/Recently_Viewed_Product__c.object-meta.xml
<CustomObject>
    <label>Recently Viewed Product</label>
    <nameField>
        <displayFormat>PN-{0000}</displayFormat>
        <label>Recently Viewed Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recently Viewed Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>