force-app/main/default/objects/Recently_Viewed_Product__c/fields/Product_Id__c.field-meta.xml
<CustomField>
    <fullName>Product_Id__c</fullName>
    <label>Product Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>