force-app/main/default/objects/Recently_Viewed_Product__c/fields/Viewed_On__c.field-meta.xml
<CustomField>
    <fullName>Viewed_On__c</fullName>
    <label>Viewed On</label>
    <type>DateTime</type>
</CustomField>